--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
-    "cors": "^2.8.4"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.7"
